CSS: Fix up contrast issue with hyperlinks in posts

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -54,6 +54,10 @@ body {
   color: white; 
 }
 
+.post a {
+  color: skyblue;
+}
+
 .post:last-child {
   border-bottom: 0;
 }
